# AnyActions

./: .gitattributes  .gitignore  LICENSE  README.md  example_claude_web.py  example_openai_web.py  experiment.py  requirements.txt  usecase_claude_web_JIRA.py  usecase_claude_web_case3.py  usecase_claude_web_oAPIkey.py  usecase_claude_web_wAPIkey.py
.actions/: .api_keys  (+1 more)
AnyActions-SDK/: .env.example  README.md  conf.py  demo.py  pyproject.toml
AnyActions-SDK/anyactions/: __init__.py  main.py
AnyActions-SDK/anyactions/common/: __init__.py  base.py  constants.py  local.py  types.py  utils.py
AnyActions-SDK/anyactions/common/aws/: AWSUtils.py
AnyActions-SDK/anyactions/common/db/: aapi_dao.py  validate.py
AnyActions-SDK/anyactions/common/exception/: anyactions_exceptions.py
AnyActions-SDK/anyactions/common/procedure/: Action.py  actions.py  local.py
AnyActions-SDK/anyactions/common/protocol/: protocols.py
AnyActions-SDK/anyactions/core/: Main.py  __init__.py  abstract.py  actor.py  decorators.py  hub.py  retriever.py
AnyActions-SDK/anyactions/core/client/: __init__.py  aws_utils.py  client.py  request_status.py
AnyActions-SDK/anyactions/core/procedure/: act.py  actor.py  hub.py  utils.py
AnyActions-SDK/anyactions/core/retrieve/: __init__.py  api_definition_retriever.py  tool_retriever.py
AnyActions-SDK/docs/: conf.py
AnyActions-SDK/docs/_include/: core.rst
AnyActions-SDK/test-files/: test-callback-ok.json  test-retrieve-not-found.json  test-retrieve-ok.json  test-upload-ok.json  test_tool_call.py
AnyActions-SDK/tests/: test_local.py
(+65 files in other folders)
