[tool.poetry]
name = "anyactions"
version = "0.1.0"
description = ""
authors = ["Anthea Zhao <antheaz@anyactions.com>", "Ziang Tong <97473223+DannyTDS@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "anyactions" },
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.35.68"
openai = "^1.55.0"
anthropic = "^0.39.0"
python-dotenv = "^1.0.1"
sphinx-autodoc-typehints = "^2.5.0"
requests = "^2.32.3"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
